--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body {
     top: 0;
     left: 0;
     width: 98%;
+    padding: 10px 1%; 
     /* 100% - (1% + 1%) */
     align-items: center;
     display: grid;
